@startuml
title 비동기 이벤트 소비 구조 - 2. Inbox 처리와 Worker

skinparam backgroundColor #FFFFFF
skinparam shadowing false
skinparam linetype ortho
skinparam packageStyle rectangle
skinparam defaultTextAlignment center

skinparam class {
  BackgroundColor #FFFFFF
  BorderColor #CBD5E1
  ArrowColor #475569
  FontColor #0F172A
  HeaderBackgroundColor #F8FAFC
}

skinparam interface {
  BackgroundColor #F8FAFC
  BorderColor #94A3B8
  FontColor #0F172A
}

skinparam note {
  BackgroundColor #F0FDF4
  BorderColor #86EFAC
  FontColor #166534
}

top to bottom direction

class "InboxRoutingSupport" as InboxRoutingSupport

class "InboxEnqueueService" as InboxEnqueueService {
  + enqueue(consumerName, eventId, eventType, payload): boolean
}

interface "InboxRepository" as InboxRepository
class "InboxMessage" as InboxMessage

interface "InboxSignalPublisher" as InboxSignalPublisher {
  + signal(consumerName): void
}

class "InboxWorkerScheduler" as InboxWorkerScheduler {
  + signal(consumerName): void
  + pollAndProcess(): void
}

class "InboxHandlerRegistry" as InboxHandlerRegistry {
  + findHandler(consumerName, eventType): Optional<InboxEventHandler>
}

interface "InboxEventHandler" as InboxEventHandler {
  + handle(eventId, eventType, payload): void
}

class "ProcessorBackedInboxEventHandler" as ProcessorBackedInboxEventHandler

interface "EventMessageProcessor" as EventMessageProcessor {
  + process(message, eventId, eventType): void
}

InboxRoutingSupport --> InboxEnqueueService : Inbox 적재 요청
InboxEnqueueService --> InboxRepository : pending 메시지 저장
InboxEnqueueService --> InboxSignalPublisher : 커밋 후 처리 신호
InboxWorkerScheduler ..|> InboxSignalPublisher
InboxWorkerScheduler --> InboxRepository : 조회 / 점유 / 재시도 / 상태 반영
InboxWorkerScheduler --> InboxHandlerRegistry : 처리 핸들러 조회
InboxHandlerRegistry --> InboxEventHandler
ProcessorBackedInboxEventHandler ..|> InboxEventHandler
ProcessorBackedInboxEventHandler --> EventMessageProcessor
InboxRepository --> InboxMessage

note right of InboxWorkerScheduler
Worker는 Inbox에 쌓인 메시지를 가져와
재시도와 stale recovery를 처리하고
맞는 Processor로 위임한다.
end note

@enduml
